Fixed issue with name overflow

--- a/src/components/PointTracker.css
+++ b/src/components/PointTracker.css
@@ -61,6 +61,9 @@
     text-align: center;
     padding: 5px;
     font-weight: 700;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .point-tracker .player.is-winning {
